# TomoReader

./: .env.example  .gitignore  .prettierignore  ADR.md  AUDIT.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SPEC.md  STYLES.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  util.rs
src-tauri/src/archive/: cbr.rs  cbz.rs  epub.rs  mod.rs  sorting.rs
src-tauri/src/commands/: comics.rs  documents.rs  highlights.rs  mod.rs  pockets.rs  reader.rs  translate.rs
src/components/: Icon.tsx  Toaster.tsx  toaster.css
src/features/reader/: DocReader.tsx  EpubView.tsx  PdfView.tsx  ReaderView.tsx  docreader.css  pdfUtils.test.ts  pdfUtils.ts  reader.css  useDocReader.test.ts  useDocReader.ts  useReader.ts
src/features/settings/: SettingsPanel.tsx  settings.css
src/features/vocabulary/: VocabularyView.tsx  vocabulary.css
src/lib/: api.ts  languages.ts  settings-store.test.ts  settings-store.ts  toast-store.test.ts  toast-store.ts
src/styles/: global.css
src/types/: index.ts
